<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mpdam.info.tdsapp.Activity.InscriptionActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/memail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:drawableLeft="@drawable/ic_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:drawableLeft="@drawable/ic_pass"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mpassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Retaper le mot de passe"
                    android:drawableLeft="@drawable/ic_pass"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mnom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prenom"
                    android:drawableLeft="@drawable/ic_person1"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mprenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom"
                    android:drawableLeft="@drawable/ic_person1"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/msociete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Soc"
                    android:drawableLeft="@drawable/ic_society"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/madresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Adr"
                    android:drawableLeft="@drawable/ic_marker"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mtele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tele"
                    android:drawableLeft="@drawable/ic_tel"
                    android:background="#ffffff"
                    android:padding="8dp"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     android:text="@string/fournisseur"
                  />

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/demandeur"
                 />
            </RadioGroup>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/registre"
                android:onClick="inscrit"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
